[gd_scene load_steps=4 format=3 uid="uid://tloknn2slv1w"]

[ext_resource type="Script" path="res://Camera/camera_2d.gd" id="1_ur5xk"]
[ext_resource type="PackedScene" uid="uid://1u56hh1j6n4d" path="res://Enemies/BadFish/BadFish.tscn" id="2_dymfs"]

[sub_resource type="Curve2D" id="Curve2D_56ipn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 485.275, 344, 0, 0, 0, 0, 485.275, 720, 0, 0, 0, 0, 242.637, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 344)
}
point_count = 5

[node name="Camera2D" type="Camera2D"]
position = Vector2(0, 128)
script = ExtResource("1_ur5xk")
enemy_scene = ExtResource("2_dymfs")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="EnemyPath" type="Path2D" parent="."]
position = Vector2(-240, -1018.72)
scale = Vector2(0.98913, 1.91489)
curve = SubResource("Curve2D_56ipn")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(485.275, 344)
rotation = 1.5708

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
